...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text("Available teachers..."),
      ),
      body: Padding(
        padding: EdgeInsets.only(top: 20.0),
        child: Container(
          child: FutureBuilder(
            future: _data,
...
                          teacherLong);

                      //returning teachers only within the range of 5Km
                      if (teacherDistance < 4) {
                        return Card(
                          child: ListTile(
                            key: ValueKey("teachersKey"),
                            leading: Image(
                              image: NetworkImage(
                                  'https://xenforo.com/community/data/avatars/o/202/202502.jpg'),
                            ),
                            title: Text(
                              snapshot.data[index].data()["teacherName"],
...
