...
                child: Center(
                  child: TextField(
                    onChanged: (val) {
                      initiateSearch(val);
                    },
                    decoration: InputDecoration(
                      hintText: "search for subject",
                      icon: Icon(
                        Icons.search,
                        size: 35.0,
                      ),
                      border: InputBorder.none,
                    ),
...
